--- a/index.html
+++ b/index.html
@@ -181,58 +181,59 @@
         </div>
     </div>
 
-    <!--(8) Reservation Area-->
-    <div class="reservation" id="reservation">
-        <div class="section-hedder">
-            <h2>Reservation Form</h2>
-            <hr>
+  <!-- (8)Reservation Area -->
+  <div class="reservation" id="reservation">
+    <div class="section-header">
+        <h2>Reservation Form</h2>
+        <hr>
+    </div>
+    <form action="#" method="#">
+        <div class="form-group">
+            <label for="full-name">Full Name</label>
+            <input type="text" name="fullname" id="full-name" placeholder="last name,first name" required>
+            <label for="email">Email Address</label>
+            <input type="email" name="email" id="email" placeholder="mail@gmail.com" required>
+            <label for="phone">Phone Number</label>
+            <input type="number" name="phone" id="phone" placeholder="(63)0912345678" required>
+            <p>Reservation Details</p>
+            <label for="guest-num">Number of Guest</label>
+            <select name="guest_num" id="guest-num">
+                <option value="1person">1</option>
+                <option value="2person">2</option>
+                <option value="3person">3</option>
+                <option value="4person">4</option>
+                <option value="morethan4">more than4</option>
+            </select>
+            <label for="res-date">Reservation Date</label>
+            <input type="date" name="resdate" id="res-date" required>
+            <p>Reservation Time</p>
+            <div class="res-time">
+                <input type="radio" name="time" id="am" required>
+                <label for="am">Morning</label>
+                <input type="radio" name="time" id="pm" required>
+                <label for="pm">Afternoon</label>
+                <input type="radio" name="time" id="night" required>
+                <label for="night">Night</label>
+            </div>
         </div>
-        <form action="#" method="#">
-            <div class="form-group">
-                <label for="full-name">Full Name</label>
-                <input type="text" name="fullname" id="fumm-name" placeholder="last name, first name" required>
-                <label for="full-name">Email Adress</label>
-                <input type="email" name="email" id="email" placeholder="mail@gmail.com" required>
-                <label for="phone">Phone Number</label>
-                <input type="number" name="phone" id="phone" placeholder="(63)0912345678" required>
-                <p>Reservation Details</p>
-                <select name="guest_num" id="guest_num">
-                    <option value="1person">1</option>
-                    <option value="2person">2</option>
-                    <option value="3person">3</option>
-                    <option value="4person">4</option>
-                    <option value="morethan4">more than4</option>
-                </select>
-                <label for="res-date">Reservation Date</label>
-                <input type="=date" name="resdate" id="res-date" placeholder="dd/mm/yyyy" required>
-                <p>Reservation Time</p>
-                <div class="res-time">
-                    <input type="radio" name="time" id="am" required>
-                    <label for="am">Morning</label>
-                    <input type="radio" name="time" id="pm" required>
-                    <label for="pm">Afternoon</label>
-                    <input type="radio" name="time" id="night" required>
-                    <label for="night">Night</label>
-                </div>
+        <div class="form-group">
+            <label for="request">Additional Request</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <h3>Payments</h3>
+            <label for="name-card">Full Name</label>
+            <input type="text" name="name_card" id="name-card" placeholder="John Doe" required>
+            <label for="cc-num">Credit Card Number</label>
+            <input type="number" name="cc_num" id="cc-num" placeholder="1234567890">
+            <div class="res-agreement">
+                <input type="checkbox" name="agree" id="agree">
+                <label for="agree">I agree in the terms and conditions.</label>
             </div>
-            <div class="form-group">
-                <label for="request">Additional Request</label>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-                <h3>Payments</h3>
-                <label for="name-card">Full Name</label>
-                <input type="text" name="name_card" id="name-card" placeholder="John Doe" required>
-                <label for="cc-num">Credit Card Number</label>
-                <input type="number" name="cc_num" id="cc-num" placeholder="01234567890" required>
-                <div class="res-agreement">
-                    <input type="checkbox" name="agree" id="agree">
-                    <label for="agree">I agree in the terms and condtions.</label>
-                </div>
-                <input type="submit" name="submit" value="send">
-            </div>
-        </form>
-    </div><!--End of Reservation-->
+            <input type="submit" name="submit" value="send">
+        </div>
+    </form>
+</div><!---End of Reservation-->
 
-    <!--(9) Footer Area-->
+    <!-- (9)Footer Area -->
     <div class="footer">
         <div class="footer-contents">
             <div class="footer-widgets">
@@ -240,47 +241,42 @@
                 <table>
                     <tr>
                         <th>Day</th>
-                        <th>...........</th>
+                        <th>.............</th>
                         <th>Availability</th>
                     </tr>
                     <tr>
                         <td>Monday</td>
-                        <td>...........</td>
-                        <td>Closed</td>
-                    </tr>
-                    <tr>
-                        <td>Monday</td>
-                        <td>...........</td>
+                        <td>............</td>
                         <td>Closed</td>
                     </tr>
                     <tr>
                         <td>Tuesday</td>
-                        <td>...........</td>
+                        <td>............</td>
                         <td>09:00-22:00</td>
                     </tr>
                     <tr>
                         <td>Wednesday</td>
-                        <td>...........</td>
-                        <td>09:00-22:00</td>
+                        <td>............</td>
+                        <td>Closed</td>
                     </tr>
                     <tr>
-                        <td>Thursday</td>
-                        <td>...........</td>
+                        <td>Thurday</td>
+                        <td>............</td>
                         <td>09:00-22:00</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
-                        <td>...........</td>
+                        <td>............</td>
                         <td>09:00-22:00</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
-                        <td>...........</td>
+                        <td>............</td>
                         <td>09:00-22:00</td>
                     </tr>
                     <tr>
                         <td>Sunday</td>
-                        <td>...........</td>
+                        <td>............</td>
                         <td>09:00-22:00</td>
                     </tr>
                 </table>
@@ -311,20 +307,23 @@
                 <h3>Other Location</h3>
                 <h4>Coffee Bean Phillippines</h4>
                 <p>1234 IT Park</p>
+                <p>Cebu City</p>
                 <h4>Coffee Bean Tokyo</h4>
                 <p>1234 Business Park</p>
-                <p>Tokyo Japan</p>    
-            </div><!--End of Footer-Widgets-->
-        </div><!--End of Footer-contents-->
-    </div><!--End of Footer-->
+                <p>Tokyo Japan</p>
+            </div><!---End of Footer-Widgets-->
+        </div><!---End of Footer-contents-->
+    </div><!---End of Footer-->
+
+    <!--(10) Footer Social-->
     <div class="footer-social">
         <div class="social-widgets">
             <h3>Coffee Bean</h3>
         </div>
         <div class="social-widgets">
-            <a href="#"><img src="/assets/images/icon-fb.png" alt=""></a>
-            <a href="#"><img src="/assets/images/icon-ig.png" alt=""></a>
-            <a href="#"><img src="/assets/images/icon-tw.png" alt=""></a>
+            <a href="#"><img src="assets/images/icon-fb.png" alt="Facebook"></a>
+            <a href="#"><img src="assets/images/icon-ig.png" alt="Instagram"></a>
+            <a href="#"><img src="assets/images/icon-tw.png" alt="Twitter"></a>
         </div>
         <div class="social-widgets">
             <h4>©2021|Kredo IT Abroad</h4>
@@ -333,6 +332,5 @@
     </div>
 
 </div><!--End of wrapper-->
-    
 </body>
 </html>
